--- a/tooltip.css
+++ b/tooltip.css
@@ -6,16 +6,19 @@
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 150px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
+    width: 250px;
+    background-color: #000;
+    color: #ff0;
+    padding: 1px 0 1px 0;
     position: absolute;
+	bottom: 1px;
     z-index: 1;
+    text-align: left;
+    margin-left: 10px;
+	/*
     bottom: -300%;
     left: 70%;
-    margin-left: -60px;
+	*/
     opacity: 0;
     transition: opacity 0.3s;
 }
